recetas creadas, falta exportar a pdf

--- a/gestor/templates/recetas/recetas.html
+++ b/gestor/templates/recetas/recetas.html
@@ -52,7 +52,9 @@
                                 id = '{{ receta.idreceta}}', 
                                 objeto='receta',
                                 objeto2='{{receta.fechareceta}}'
-                                )">Eliminar</a> 
+                                )">Eliminar</button>
+                            
+                            <a class="btn btn-success"  href="/imprimirreceta/{{receta.idreceta}}/"  role="button" target ="_blank">Imprimir</a> 
     
                         </td>
                     </tr>
