Exportacion de pdf Ok

--- a/gestor/templates/consultas/actualizar_consulta.html
+++ b/gestor/templates/consultas/actualizar_consulta.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Edicion de Consulta {{consulta.paciente.nombre}}{% endblock title %}
+{% block title %} | Consulta {% endblock title %}
 {% block extrahead %}
 {{consultaform.media }}
 {% endblock %}
