--- a/gestor/templates/consultas/crear_consulta.html
+++ b/gestor/templates/consultas/crear_consulta.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Registro de Consulta {% endblock title %}
+{% block title %} | Consulta {% endblock title %}
 {% block extrahead %}
 {{ConsultaForm.media }}
 {% endblock %}
