--- a/gestor/templates/pacientes/actualizar_paciente.html
+++ b/gestor/templates/pacientes/actualizar_paciente.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Edicion de Paciente {{paciente.nombre}}{% endblock title %}
+{% block title %} | Paciente {% endblock title %} 
 {% block extrahead %}
 {{pacienteform.media }}
 {% endblock %}
