--- a/gestor/templates/recetas/actualizar_receta.html
+++ b/gestor/templates/recetas/actualizar_receta.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Edicion de Receta {{consulta.paciente.nombre}}{% endblock title %}
+{% block title %} | Receta {% endblock title %}
 {% block extrahead %}
 {{recetaform.media }}
 {% endblock %}
