--- a/gestor/templates/recetas/crear_receta.html
+++ b/gestor/templates/recetas/crear_receta.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Registro de receta {% endblock title %}
+{% block title %} | Receta {% endblock title %}
 {% block extrahead %}
 {{RecetaForm.media }}
 {% endblock %}
