--- a/gestor/templates/citas/actualizar_cita.html
+++ b/gestor/templates/citas/actualizar_cita.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Registro de Cita {% endblock title %}
+{% block title %} | Cita {% endblock title %}
 {% block extrahead %}
 {{citaform.media }}
 {% endblock %}
