--- a/gestor/templates/pacientes/crear_paciente.html
+++ b/gestor/templates/pacientes/crear_paciente.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Registro de Paciente {% endblock title %}
+{% block title %} | Paciente {% endblock title %}
 {% block extrahead %}
 {{ PacienteForm.media }}
 {% endblock %}
