--- a/gestor/templates/recetas/recetas.html
+++ b/gestor/templates/recetas/recetas.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} | Consultas {% endblock title %}
+{% block title %} | Recetas {% endblock title %}
 
 {% block content %}
 <div class="text-center">
