--- a/gestor/templates/consultas/consultas.html
+++ b/gestor/templates/consultas/consultas.html
@@ -18,7 +18,8 @@
     </div>
     <div class="content2">
         <div class="content5">
-            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="consulta">
+            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" 
+            autocomplete="off" name="consulta">
         </div>
         <div class="content6">
             <button class="btn btn-outline-success" type="submit" onclick="buscar_consulta()">Buscar</button>
