--- a/gestor/templates/pacientes/pacientes.html
+++ b/gestor/templates/pacientes/pacientes.html
@@ -18,7 +18,8 @@
     </div>
     <div class="content2">
         <div class="content5">
-            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="nombre" >
+            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" 
+            autocomplete="off" name="nombre" >
         </div>
         <div class="content6">
             <button class="btn btn-outline-success"  onclick="buscar_paciente()">Buscar</button>
@@ -59,8 +60,6 @@
     {% include "paginacion.html" %}
     </div>
 </div>
-
-
     {% if mensaje == 1 %}
     <script>
         swal({
