--- a/gestor/templates/recetas/crear_receta.html
+++ b/gestor/templates/recetas/crear_receta.html
@@ -28,7 +28,7 @@
                        
                         <div class="content">
                             <button type="submit" class="btn btn-primary">Guardar</button>
-                            <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
+                            <a class="btn btn-secondary" href="/recetas/">Cancelar</a>
                         </div>
                     </form>
                 </div>
