--- a/gestor/templates/recetas/recetas.html
+++ b/gestor/templates/recetas/recetas.html
@@ -9,16 +9,15 @@
 </div>
 <div class="content">
     <div class="content2">
-        <div class="content3">
-            <a class="btn btn-primary" href="/agregarreceta/">Agregar</a>
-        </div>
+        
         <div class="content4">
             <a class="btn btn-secondary" href="/recetas/">Restablecer</a>
         </div>
     </div>
     <div class="content2">
         <div class="content5">
-            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="receta">
+            <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" 
+            autocomplete="off" name="receta">
         </div>
         <div class="content6">
             <button class="btn btn-outline-success" type="submit" onclick="buscar_receta()">Buscar</button>
