--- a/gestor/static/style.css
+++ b/gestor/static/style.css
@@ -104,6 +104,9 @@ nav.open ~ .overlay {
 }
 
 
+
+
+
 /*CONTAINERS BOTONES GUARDAR Y CANCELAR*/
 .container1{
   display:flex;
@@ -120,7 +123,6 @@ nav.open ~ .overlay {
 
 /*DISENO PARA ESTADISTICAS Y HOME*/
 .container_1{
-  background-color: hsl(240, 51%, 74%);
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -137,25 +139,16 @@ nav.open ~ .overlay {
   justify-content: center;
   align-items: center;
   width: 25%;
-  height: 70px;
+  height: 60px;
 }
 .container_home{
-  border: 1px solid black;
+
   margin: 10px;
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
 }
 
-.tdcitas{
-  border: 1px solid black;
-  margin: 10px;
-  text-align: center;
- 
-  justify-content: center;
-  align-items: center;
-  width: 25px;
-  height: 60px;
-}
 
 
 
@@ -187,9 +180,15 @@ nav.open ~ .overlay {
 .container_home_buttons{
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
-
+.container_home_buttons_2{
+  width: 100%;
+  padding: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  
+}
 
 /* DISENO DE LOS BOTONTES AGREGAR RESTABLECER Y BUSCAR*/
 .content{
@@ -202,7 +201,8 @@ nav.open ~ .overlay {
   width: 100%;
   padding: 5px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  
 }
 .content3{
   display: flex;
@@ -300,4 +300,33 @@ nav.open ~ .overlay {
     text-align: left;
     padding-left: 1.2rem;
   }
+}
+
+
+/*DISENO DE LAS GRAFICAS*/
+.chart{
+  width: 100%;
+  min-height: 400px;
+  min-width:400px;
+}
+
+.chart2{
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  min-width:400px;
+}
+
+.chart3{
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  min-width:800px;
+}
+
+.chart4{
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  min-width:400px;
 }
