--- a/gestor/templates/index.html
+++ b/gestor/templates/index.html
@@ -7,36 +7,35 @@
     <br><br>
         <h1>System</h1>
 </div>
-<d class="container_home_buttons">
-  <a class="btn btn-outline-success" href="/agregarpaciente/">Agregar paciente</a>
-  <a class="btn btn-outline-success" href="/agregarcita/">Agregar cita</a>
-  <a class="btn btn-outline-success" href="/agregarconsulta/">Agregar consulta</a>
-  
-    <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="nombre" 
-            autocomplete="off">
+<div class="container_home_buttons">
+    <div class="container_home_buttons_2">
+    <a class="btn btn-outline-success" href="/agregarpaciente/">Agregar paciente</a>
+    <a class="btn btn-outline-success" href="/agregarconsulta/">Agregar consulta</a>
+    </div>
+    <div class="content2">
+      <input class="form-control me-2" type="text" placeholder="Ingrese un nombre" aria-label="Search" name="nombre" 
+              autocomplete="off" style="width: 500px;">
 
-    <button class="btn btn-outline-success" type="submit" onclick="buscar_paciente_index()">Buscar</button>
-
-
+      <button class="btn btn-outline-success" type="submit" onclick="buscar_paciente_index()">Buscar</button>
+    </div>
 </div>
+
+<div class="container">
+  <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-auto">
+    <br><br>
+  <div id="chart3" class="chart3"></div>
+  </div>
+</div>
+<br><br>
 <div class="container_home">
   <div class="container_estad_2">
-    
-    {% for cita in proximacita %}
-    <h5>Paciente:  {{cita.paciente.nombre|truncatechars:15}}</h5>
-    <h5>Hora:  {{cita.horacita}}</h5>
-    {% endfor %}
+    <h4>Consultas:{{consultashoy}}</h4>
   </div>
   <div class="container_estad_2">
-    <h4>Citas: {{citashoy}} </h4> 
-  </div>
-  <div class="container_estad_2">
-    <h4>Consultas: {{consultashoy}} </h4>
-  </div>
-  <div class="container_estad_2">
-    <h4>Devengado:${{devengadohoy}}  </h4>
+    <h4>Devengado:${{devengadohoy}}</h4>
   </div>
 </div>
+
 {% if mensaje == 1 %}
     <script>
         swal({
