--- a/gestor/templates/recetas/recetas.html
+++ b/gestor/templates/recetas/recetas.html
@@ -74,7 +74,7 @@
         })
         .then((willDelete) => {
             if (willDelete) { 
-                location.href = "/consultas/"
+                location.href = "/recetas/"
             } 
         });
     </script>
